--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
-name: Pull Request
+name: Merge to Main
 
 on:
-  pull_request:
+  push:
     paths-ignore:
-      - '.github/workflows/pr.yml'
+      - internal/houston/ui
     branches:
       - main
 
@@ -12,29 +12,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
       - uses: actions/setup-go@v5
         with:
           go-version: '^1.23'
 
-      - name: go test
-        run: go test -race -cover ./...
+      - name: go tests
+        run: go test -cover ./...
 
   lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
       - uses: actions/setup-go@v5
         with:
           go-version: '^1.23'
 
-      - name: golangci-lint run
-        uses: golangci/golangci-lint-action@v6
+      - uses: golangci/golangci-lint-action@v6
         with:
           version: latest
           args: --timeout=3m
